--- a/Notigraghy_xamarin/Notigraghy/View/CreateNoteView.xaml
+++ b/Notigraghy_xamarin/Notigraghy/View/CreateNoteView.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Notigraghy.View.CreateNoteView">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+    <ContentView.Content>
+        <StackLayout BackgroundColor="LightBlue">
+            <Label Text="글쓰기추가하장"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+    </ContentView.Content>
+</ContentView>
