--- a/Notigraghy_xamarin/Notigraghy/View/MainView.xaml
+++ b/Notigraghy_xamarin/Notigraghy/View/MainView.xaml
@@ -1,71 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Notigraghy"
              x:Class="Notigraghy.View.MainView">
 
     <AbsoluteLayout>
-
-        <!--MainScroll-->
-        <ScrollView x:Name="AbsoluteLayoutView" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" Padding="0,39,0,40">
-          
-                <!--피드-->
-                <ListView ItemsSource="{Binding MemoList}" 
-                       SeparatorVisibility="None"      
-                       CachingStrategy="RecycleElement"
-                       RowHeight="{Binding FeedHeight}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <ContentView>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="40"/>
-                                        <RowDefinition Height="{Binding DeviceWidth}"/>
-                                    </Grid.RowDefinitions>
-
-                                    <Grid Grid.Row="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="1*"/>
-                                            <ColumnDefinition Width="1*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Label Text="{Binding EditDate, StringFormat={}{0:yyyy년MM월dd일}}" TextColor="Black" FontSize="Default" VerticalOptions="End" HorizontalOptions="Start"/>
-                                        <Image Grid.Column="1" Source="YellowStar.png" Aspect="AspectFit" VerticalOptions="Center" HorizontalOptions="End" Margin="0,0,10,0"/>
-                                    </Grid>
-
-                                    <Frame Grid.Row="1" HasShadow="False" BorderColor="LightGray" Padding="1">
-                                        <Image Source="{Binding ThumNail}" Aspect="Fill" BackgroundColor="LightCoral" />
-                                    </Frame>
-                                </Grid>
-                            </ContentView>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-                
-                <!--<Image Source="{Binding Feedthumnail}" Aspect="Fill"/>-->
-             
-        </ScrollView>
+        <!--Contents-->
+        <ContentView  AbsoluteLayout.LayoutBounds="0,0.5,1,0.84" AbsoluteLayout.LayoutFlags="All" 
+                      Content="{Binding BodyView}"/>
         
         <!--SearchBar-->
-        <Grid AbsoluteLayout.LayoutBounds="0,0,1,40" AbsoluteLayout.LayoutFlags="WidthProportional,YProportional" BackgroundColor="#FFFFFF">
+        <Grid AbsoluteLayout.LayoutBounds="0,0,1,0.08" AbsoluteLayout.LayoutFlags="All" BackgroundColor="#FFFFFF">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="2.6*"/>
             </Grid.ColumnDefinitions>
-            <Label Text="NOTE" VerticalOptions="Center" HorizontalOptions="Start" Margin="10,0,0,0"/> 
-            <Frame Grid.Column="1" HasShadow="False" CornerRadius="15" BackgroundColor="Transparent" BorderColor="Red" Margin="2"
-                   VerticalOptions="FillAndExpand" HorizontalOptions="Fill"/> 
+            <Label Text="NOTIGRAGHY" VerticalOptions="Center" HorizontalOptions="Start" Margin="10,0,0,0"/>
+            <Frame Grid.Column="1" HasShadow="False" CornerRadius="15" BackgroundColor="Transparent" BorderColor="LightGray" Margin="5,5,10,5"
+                   VerticalOptions="FillAndExpand" HorizontalOptions="Fill" Padding="0">
+                <ImageButton Source="Search.png" Aspect="AspectFill" VerticalOptions="Center" HorizontalOptions="End" BackgroundColor="Transparent"
+                             WidthRequest="35" HeightRequest="35" Margin="0,0,5,0"/>
+            </Frame>
         </Grid>
+        
         <!--TabMenu-->
-        <StackLayout AbsoluteLayout.LayoutBounds="0,1,1,40" AbsoluteLayout.LayoutFlags="WidthProportional,YProportional"
-                     VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="LightGray"
+        <StackLayout AbsoluteLayout.LayoutBounds="0,1,1,0.08" AbsoluteLayout.LayoutFlags="All"
+                     VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#FFFFFF"
                      Padding="1" Orientation="Horizontal">
-            <Button Text="FEED" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding TabFeedCommand}" BackgroundColor="#FFFFFF" Padding="0"/>
-            <Button Text="LIST" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding TabListCommand}" BackgroundColor="#FFFFFF" Padding="0"/>
-            <Button Text="WRITE" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding TabCreateNoteCommand}" BackgroundColor="#FFFFFF" Padding="0"/>
+            <Button Text="FEED" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Command="{Binding TabFeedCommand}" BackgroundColor="#FFFFFF" Padding="0"/>
+            <Button Text="LIST" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Command="{Binding TabListCommand}" BackgroundColor="#FFFFFF" Padding="0"/>
+            <Button Text="WRITE" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Command="{Binding TabCreateNoteCommand}" BackgroundColor="#FFFFFF" Padding="0"/>
         </StackLayout>
-        
-        
     </AbsoluteLayout>
 </ContentPage>
